--- a/AdaWebsite/AdaWebsite.html
+++ b/AdaWebsite/AdaWebsite.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <footer>
-      <p>Made by <a href="https://www.facebook.com/eliana.abel.9/">[Eliana]</a></p>
+      <p>Made by <a href="https://www.facebook.com/eliana.abel.9/">[Eliana Calote]</a></p>
     </footer>
   </body>
 </html>
